log/build_2024-08-27_15-05-48/ur3/stderr.log
  File "/home/saba/workspaces/ramen_robot_ws/install/ur3/lib/python3.10/site-packages/ur3/ur3_negi_node.py", line 78
    ur_script = (
                ^
SyntaxError: '(' was never closed

